==> hathach/tinyusb/src/portable/microchip/samd/hcd_samd.c <==
#include "tusb_option.h"
#include "host/hcd.h"
#include "sam.h"
#define USB_HOST_PTYPE_DIS         0x0
#define USB_HOST_PTYPE_CTRL        0x1
#define USB_HOST_PTYPE_ISO         0x2
#define USB_HOST_PTYPE_BULK        0x3
#define USB_HOST_PTYPE_INT         0x4
#define USB_HOST_PTYPE_EXT         0x5
#define USB_HOST_PCFG_PTOKEN_SETUP 0x0
#define USB_HOST_PCFG_PTOKEN_IN    0x1
#define USB_HOST_PCFG_PTOKEN_OUT   0x2
#define USB_PCKSIZE_ENUM(size) \
  ((size) >= 1024      ? 7     \
      : (size) >= 1023 ? 7     \
      : (size) > 256   ? 6     \
      : (size) > 128   ? 5     \
      : (size) > 64    ? 4     \
      : (size) > 32    ? 3     \
      : (size) > 16    ? 2     \
      : (size) > 8     ? 1     \
                       : 0)

bool hcd_init(uint8_t rhport, const tusb_rhport_init_t* rh_init) {
  TU_ASSERT(rhport == 0);
  (void) rh_init;
  fake_fnum = 0;

  // reset to get in a clean state.
  USB->HOST.CTRLA.bit.SWRST = 1;
  while (USB->HOST.SYNCBUSY.bit.SWRST == 0)
    ;
  while (USB->HOST.SYNCBUSY.bit.SWRST == 1)
    ;

  // load pad calibration
  USB->HOST.PADCAL.bit.TRANSP = (*((uint32_t*) USB_FUSES_TRANSP_ADDR) & USB_FUSES_TRANSP_Msk) >> USB_FUSES_TRANSP_Pos;
  USB->HOST.PADCAL.bit.TRANSN = (*((uint32_t*) USB_FUSES_TRANSN_ADDR) & USB_FUSES_TRANSN_Msk) >> USB_FUSES_TRANSN_Pos;
  USB->HOST.PADCAL.bit.TRIM = (*((uint32_t*) USB_FUSES_TRIM_ADDR) & USB_FUSES_TRIM_Msk) >> USB_FUSES_TRIM_Pos;

  USB->HOST.QOSCTRL.bit.CQOS = 3; // High Quality
  USB->HOST.QOSCTRL.bit.DQOS = 3; // High Quality

  // configure host-mode
  samd_free_all_pipes(); // initializes pipe handles and usb_pipe_table
  USB->HOST.DESCADD.reg = (uint32_t) (&usb_pipe_table[0]);
  USB->HOST.CTRLB.reg = USB_HOST_CTRLB_SPDCONF_NORMAL | USB_HOST_CTRLB_VBUSOK;
  USB->HOST.CTRLA.reg = USB_CTRLA_MODE_HOST | USB_CTRLA_ENABLE | USB_CTRLA_RUNSTDBY;
  while (USB->HOST.SYNCBUSY.bit.ENABLE == 1)
    ;

  // enable basic USB interrupts
  USB->HOST.INTFLAG.reg |= USB->HOST.INTFLAG.reg; // clear pending
  USB->HOST.INTENCLR.reg = USB_HOST_INTENCLR_MASK;
  USB->HOST.INTENSET.reg = USB_HOST_INTENSET_DCONN;
  USB->HOST.INTENSET.reg = USB_HOST_INTENSET_DDISC;
  USB->HOST.INTENSET.reg = USB_HOST_INTENSET_WAKEUP;
  USB->HOST.INTENSET.reg = USB_HOST_INTENSET_RST;

  return true;
}

void hcd_int_enable(uint8_t rhport)
{
  (void) rhport;
  NVIC_EnableIRQ(USB_0_IRQn);
  NVIC_EnableIRQ(USB_1_IRQn);
  NVIC_EnableIRQ(USB_2_IRQn);
  NVIC_EnableIRQ(USB_3_IRQn);
}

void hcd_int_disable(uint8_t rhport)
{
  (void) rhport;
  NVIC_DisableIRQ(USB_3_IRQn);
  NVIC_DisableIRQ(USB_2_IRQn);
  NVIC_DisableIRQ(USB_1_IRQn);
  NVIC_DisableIRQ(USB_0_IRQn);
}

void hcd_int_enable(uint8_t rhport)
{
  (void) rhport;
  NVIC_EnableIRQ(USB_IRQn);
}

void hcd_int_disable(uint8_t rhport)
{
  (void) rhport;
  NVIC_DisableIRQ(USB_IRQn);
}

uint32_t hcd_frame_number(uint8_t rhport)
{
  (void) rhport;

// SAMD Quirk #2:
// FNUM is stalled before enumeration of Low-Speed devices.
// internal frame counter can be used as workaround (not very accurate)
#ifdef HCD_SAMD_FAKE_FNUM
  uint8_t start, current, prev;
  uint8_t loop_count = (USB->HOST.STATUS.bit.SPEED == TUSB_SPEED_HIGH) ? 8 : 1;
  for (uint8_t i = 0; i < loop_count; i++) {
    start = USB->HOST.FLENHIGH.reg;
    current = start;
    // wait until wrap-around
    prev = current;
    while (current <= start) {
      current = USB->HOST.FLENHIGH.reg;
      if (current > prev)
        break;
      prev = current;
    }
    // wait until start is reached again
    prev = current;
    while (current > start) {
      current = USB->HOST.FLENHIGH.reg;
      if (current > prev)
        break;
      prev = current;
    }
  }
  fake_fnum += 1;
  return fake_fnum;
#else
  return USB->HOST.FNUM.bit.FNUM;
#endif // HCD_SAMD_FAKE_FNUM
}

bool hcd_port_connect_status(uint8_t rhport)
{
  TU_ASSERT(rhport == 0);
  return USB->HOST.STATUS.bit.LINESTATE != 0;
}

void hcd_device_close(uint8_t rhport, uint8_t dev_addr)
{
  (void) rhport;

  for (uint8_t pipe = 0; pipe < USB_PIPE_NUM; pipe++) {
    volatile usb_pipe_status_t* pipe_status = &usb_pipe_status_table[pipe];
    if (pipe_status->dev_addr == dev_addr) {
      samd_free_pipe(pipe);
    }
  }
}

bool hcd_edpt_open(uint8_t rhport, uint8_t dev_addr, tusb_desc_endpoint_t const* ep_desc)
{
  TU_ASSERT(rhport == 0);

  uint8_t pipe;
  volatile usb_pipe_status_t* pipe_status;
  const uint8_t ep_addr = ep_desc->bEndpointAddress;
  const uint8_t bmAttributes = (ep_desc->bmAttributes.xfer)       |
                              ((ep_desc->bmAttributes.sync) << 2) |
                              ((ep_desc->bmAttributes.usage) << 4);

  // configure the pipe
  pipe = samd_configure_pipe(dev_addr, ep_addr);
  if (pipe >= USB_PIPE_NUM) {
    return false;
  }

  // initial configuration
  pipe_status = &usb_pipe_status_table[pipe];
  USB->HOST.HostPipe[pipe].PCFG.reg &= ~USB_HOST_PCFG_PTYPE_Msk;
  USB->HOST.HostPipe[pipe].PCFG.bit.PTYPE = bmAttributes + 1;
  USB->HOST.HostPipe[pipe].BINTERVAL.reg = ep_desc->bInterval;
  USB->HOST.HostPipe[pipe].PSTATUSCLR.reg = USB_HOST_PSTATUSCLR_DTGL;
  USB->HOST.HostPipe[pipe].PINTENCLR.reg = USB_HOST_PINTENCLR_MASK;
  pipe_status->max_packet_size = ep_desc->wMaxPacketSize;
  usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.SIZE = USB_PCKSIZE_ENUM(pipe_status->max_packet_size);
  usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.AUTO_ZLP = 0;

  return true;
}

bool hcd_setup_send(uint8_t rhport, uint8_t dev_addr, uint8_t const setup_packet[8])
{
  TU_ASSERT(rhport == 0);

  uint8_t pipe;
  volatile usb_pipe_status_t* pipe_status;

  // configure the pipe
  pipe = samd_configure_pipe(dev_addr, 0);
  if (pipe >= USB_PIPE_NUM) {
    return false;
  }

  // prepare transfer
  pipe_status = &usb_pipe_status_table[pipe];
  usb_pipe_table[pipe].HostDescBank[0].ADDR.reg = (uint32_t) setup_packet;
  pipe_status->xfer_remaining = 8;
  pipe_status->xfer_length = 0;
  usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.BYTE_COUNT = 8;
  usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.MULTI_PACKET_SIZE = 0;
  USB->HOST.HostPipe[pipe].PSTATUSSET.reg = USB_HOST_PSTATUSSET_BK0RDY;

  // clear pending interrupts
  USB->HOST.HostPipe[pipe].PINTFLAG.reg |= USB->HOST.HostPipe[pipe].PINTFLAG.reg;

  // begin transfer
  USB->HOST.HostPipe[pipe].PSTATUSCLR.reg = USB_HOST_PSTATUSCLR_PFREEZE;

  return true;
}

bool hcd_edpt_xfer(uint8_t rhport, uint8_t dev_addr, uint8_t ep_addr, uint8_t* buffer, uint16_t buflen)
{
  TU_ASSERT(rhport == 0);

  uint8_t pipe;
  volatile usb_pipe_status_t* pipe_status;

  // configure the pipe
  pipe = samd_configure_pipe(dev_addr, ep_addr);
  if (pipe >= USB_PIPE_NUM) {
    return false;
  }

  // prepare transfer
  pipe_status = &usb_pipe_status_table[pipe];
  usb_pipe_table[pipe].HostDescBank[0].ADDR.reg = (uint32_t) buffer;
  pipe_status->xfer_remaining = buflen;
  pipe_status->xfer_length = 0;
  // receive data
  if (tu_edpt_dir(pipe_status->ep_addr) == TUSB_DIR_IN) {
    usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.BYTE_COUNT = 0;
    usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.MULTI_PACKET_SIZE = pipe_status->max_packet_size;
    USB->HOST.HostPipe[pipe].PSTATUSCLR.reg = USB_HOST_PSTATUSCLR_BK0RDY;
  }
  // send data
  else {
    usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.BYTE_COUNT =
        (pipe_status->xfer_remaining < pipe_status->max_packet_size) ? pipe_status->xfer_remaining
                                                                     : pipe_status->max_packet_size;
    usb_pipe_table[pipe].HostDescBank[0].PCKSIZE.bit.MULTI_PACKET_SIZE = 0;
    USB->HOST.HostPipe[pipe].PSTATUSSET.reg = USB_HOST_PSTATUSSET_BK0RDY;
  }

  // clear pending interrupts
  USB->HOST.HostPipe[pipe].PINTFLAG.reg |= USB->HOST.HostPipe[pipe].PINTFLAG.reg;

  // begin transfer
  USB->HOST.HostPipe[pipe].PSTATUSCLR.reg = USB_HOST_PSTATUSCLR_PFREEZE;

  return true;
}
